fixed float/wrap issue on group blocks updated to fix globally on all themes

--- a/docroot/profiles/drupal_commons/themes/commons_connect/css/commons_connect-style.css
+++ b/docroot/profiles/drupal_commons/themes/commons_connect/css/commons_connect-style.css
@@ -3530,9 +3530,9 @@ div.beat-item blockquote {
 /*****************************************/
 
 .view-groups-most-active .views-field-field-group-image-fid{float: left;}
-.view-groups-most-active .views-field-title,
+/*.view-groups-most-active .views-field-title,
 .view-groups-most-active .views-field-members-count,
-.view-groups-most-active .views-field-posts-count {float:right; width: 180px;}
+.view-groups-most-active .views-field-posts-count {float:right; width: 180px;}*/
 
 .view-groups-my-groups .views-field-field-group-image-fid{float: left;}
 .view-groups-my-groups .views-field-title,
